--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -1,11 +1,14 @@
 full_name: International Conference on Advancing Agentic AI Paradigm through Neuro-Symbolic AI and Swarm Intelligence
 short_name: ICAANS
 description: > # this means to ignore newlines until "baseurl:"
-  ISCLS is a forum for original and unpublished research on various
-  aspects of Computational Linguistics and Digital Humanities related to
-  Sanskrit (Classical and Vedic), Prakrit, Pali, Buddhist Hybrid Sanskrit, etc.
+  The 1st Multidisciplinary International Conference on Advancing Agentic AI Paradigm through Neuro-Symbolic AI, Machine Learning, Deep Learning, and Swarm Intelligence (ICAANS 2026) will bring together a diverse group of researchers, academicians, and industry experts passionate about advancing intelligent and autonomous systems.
 
-email: iscls@outlook.com
+  The conference will explore the latest developments in Neuro-Symbolic AI, Machine Learning, Deep Learning, and Swarm Intelligence, focusing on enhancing cognitive computing, intelligent decision-making, and autonomous system design. Discussions will include explainable AI, hybrid AI systems, and multi-agent models, alongside the integration of AI into real-world applications such as healthcare, finance, smart cities, and industrial automation. A key highlight of ICAANS 2026 will be innovations in intelligent systems and applications, including autonomous robotics, IoT-enabled AI, and human–AI interaction. The conference will also cover emerging AI technologies, such as quantum AI, edge computing, AI-enabled cybersecurity, and responsible AI practices.
+
+  Additionally, the conference will emphasize interdisciplinary applications of AI across sustainable development, environmental studies, biomedical engineering, social sciences, and business management, fostering the translation of AI research into societal and industrial impact. ICAANS 2026 aims to foster collaborations, spark innovative ideas, and share knowledge to address global challenges and promote a smarter, more autonomous, and ethically responsible future.
+
+
+email: icaans2026@gmail.com
 
 iteration: 1st
 full_title: 1st International Conference on Advancing Agentic AI Paradigm through Neuro-Symbolic AI and Swarm Intelligence
