--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -78,102 +78,33 @@ navbar:
     visible: True
   - id: 3
     label: Submission
+    path: /submission.html
     visible: True
-    children:
-    - id: 1
-      label: Submission
-      path: /submission.html
-      visible: True
-    - id: 2
-      label: Accepted Papers
-      path: /accepted.html
-      visible: True
   - id: 4
     label: Program
     path: /program.html
     visible: True
   - id: 5
-    label: Venue
-    path: /venue.html
-    visible: True
-  - id: 6
     label: Registration
     path: /registration.html
     visible: True
-deadline_timezone: AoE
+deadline_timezone: IN
 deadlines:
-  - date: 2023-10-03
-    text: Submission deadline
+  - date: 2026-04-15
+    text: Paper Submission Deadline
     pass_due: True
     strike_through: False
-  - date: 2023-11-28
-    text: Notification of acceptance
+  - date: 2026-05-10
+    text: Author Notification
     pass_due: True
     strike_through: False
-  - date: 2023-09-18
-    # timezone: AoE
-    text: Submission deadline
+  - date: 2026-06-05
+    # timezone: IN
+    text: Camera Ready Submission
     pass_due: True
-    strike_through: True
-  - date: 2023-11-20
-    text: Notification of acceptance
-    pass_due: True
-    strike_through: True
-  - date: 2024-01-05
-    text: Demo submission deadline
-    pass_due: True
-    strike_through: True
-  - date: 2024-01-08
-    text: Camera-ready due
-    pass_due: True
-    strike_through: False
-  - date: 2024-01-10
-    text: Demo submission deadline
-    pass_due: True
-    strike_through: False
-  - date: 2024-01-15
-    text: Notification of demo acceptance
-    pass_due: True
-    strike_through: True
-  - date: 2024-01-20
-    text: Notification of demo acceptance
-    pass_due: False
     strike_through: False
 
 sponsors:
-  - name: International Association of Sanskrit Studies
+  - name: Society for Innovation, Research, and Intelligent Computing Systems (SIRICS)
     logo_path: ./assets/images/sponsors/iass-logo.png
     url: https://www.sanskritassociation.org/
-  - name: Dharohar
-    logo_path: ./assets/images/sponsors/dharohar-logo.png
-    url: https://dharohar.org/
-  - name: Stichting de Zaaier
-    logo_path: ./assets/images/sponsors/stichting-logo.jpg
-    url: https://www.stichtingdezaaier.nl/
-  - name: Sangrah
-    logo_path: ./assets/images/sponsors/sangrah-logo.jpg
-    url: https://sangrah.org/
-#   - name: IEEE
-#     logo_path: ./assets/images/sponsors/ieee-logo.gif
-social_media:
-  facebook_link:
-  twitter_link:
-previous_iterations:
-  - name: 6th ISCLS
-    year: 2019
-    url: https://iscls.github.io/iscls2019/
-  - name: 5th ISCLS
-    year: 2013
-    url: https://sites.google.com/site/5isclc2013/Home
-  - name: 4th ISCLS
-    year: 2010
-    url: http://sanskrit.jnu.ac.in/conf/4iscls/index.jsp
-  - name: 3rd ISCLS
-    year: 2009
-    url: https://sanskrit.inria.fr/Symposium/Symposium3.html
-  - name: 2nd ISCLS
-    year: 2008
-    url: https://sanskritlibrary.org/symposium2/home.html
-  - name: 1st ISCLS
-    year: 2007
-    url: https://sanskrit.inria.fr/Symposium/
