--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -106,5 +106,5 @@ deadlines:
 
 sponsors:
   - name: Society for Innovation, Research, and Intelligent Computing Systems (SIRICS)
-    logo_path: ./assets/images/sponsors/iass-logo.png
-    url: https://www.sanskritassociation.org/
+    logo_path: 
+    url: 
