--- a/_data/submission.yml
+++ b/_data/submission.yml
@@ -1,59 +1,26 @@
-portal: CMT3 Submission Portal
-url: "https://cmt3.research.microsoft.com/ISCLS2024"
+portal: Microsoft CMT3 Submission Portal
+url: "https://cmt3.research.microsoft.com/"
 
 file_formats:
-  - PDF
+  - doc
 languages:
   - English
 
-review_mode: 1
+review_mode: 0
 # 0: double blind
 # 1: single blind
 
 pagelimits:
   - type: paper
     name: Paper
-    limit: 20
-  - type: demo
-    name: Demonstration
-    limit: 2
+    limit: 06
 
-fontsize: 10
-
-extra: |
-  <h6 class="text-info">Compilation</h6>
-
-  Let the fileame of your submision be <code>ABC.tex</code>.
-
-  <pre class="pre-scrollable bg-dark text-light rounded mt-2 p-2">
-  $ xelatex ABC
-  $ bibtex ABC
-  $ bibtex ABC # Remember to run bibtex twice
-  $ xelatex ABC
-  </pre>
-
-sources:
-- name: Sample TeX Source File
-  url: ./assets/files/iscls.tex
-  text: iscls.tex
-- name: Sample PDF file
-  url: ./assets/files/iscls.pdf
-  text: iscls.pdf
-- name: Style file
-  url: ./assets/files/scl.sty
-  text: scl.sty
-- name: Bibliography Style
-  url: ./assets/files/acl.bst
-  text: acl.bst
-- name: Sample Bibliography file
-  url: ./assets/files/iscls.bib
-  text: iscls.bib
-
+fontsize: 11
 
 template:
-  name: ISCLS Submission Template
-  description: submission template and instructions for ISCLS
-  url: ./assets/files/iscls-template.zip
-  overleaf: https://www.overleaf.com/latex/templates/submission-template-and-instructions-for-the-iscls/dmhhdjnxqftd
+  name: ICAANS Submission Template
+  description: submission template and instructions for ICAANS
+  url: ./assets/files/icaans-template.zip
+  
 
-publisher: Association for Computational Linguistics Anthology
+publisher: Publishers
