--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -1,9 +1,9 @@
-- title: Program Committee Chair
+- title: Chief Patron
   column: 1
   members:
-  - name: Arnab Bhattacharya
-    org: IIT Kanpur
-    post: ""
+  - name: Dr. K. Kala
+    org: Mother Teresa Women's University, Kodaikanal, Tamilnadu
+    post: Vice Chancellor
 - title: Organising Chair
   column: 1
   members:
