--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -31,38 +31,23 @@ show_title: false
 slideshow:
   - id: 0
     image_path: ./assets/images/slideshow/0-auroville-beach.jpg
-    description: Auroville Beach
+    description: MTWU, Kodaikanal
     photographer_name: ""
     photographer_link: ""
     active: True
   - id: 1
     image_path: ./assets/images/slideshow/1-matrimandir.jpeg
-    description: Matrimandir
+    description: MTWU, Kodaikanal
     photographer_name: ""
     photographer_link: ""
   - id: 2
     image_path: ./assets/images/slideshow/2-promenade-beach.webp
-    description: Promenade Beach
+    description: MTWU, Kodaikanal
     photographer_name: ""
     photographer_link: ""
   - id: 3
     image_path: ./assets/images/slideshow/3-whitetown.jpg
-    description: White Town
-    photographer_name: ""
-    photographer_link: ""
-  - id: 4
-    image_path: ./assets/images/slideshow/4-manakula-vinayagar-temple.jpg
-    description: Manakula Vinayagar Temple
-    photographer_name: ""
-    photographer_link: ""
-  - id: 5
-    image_path: ./assets/images/slideshow/5-auroville.png
-    description: Auroville
-    photographer_name: ""
-    photographer_link: ""
-  - id: 6
-    image_path: ./assets/images/slideshow/6-mahabalipuram.jpg
-    description: Temple, Mahabalipuram
+    description: MTWU, Kodaikanal
     photographer_name: ""
     photographer_link: ""
 navbar:
