--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -64,7 +64,7 @@ navbar:
     path: /organization.html
     visible: True
   - id: 3
-    label: Keynote
+    label: Speakers
     path: /keynote.html
     visible: True
   - id: 4
