corrections in committee

--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -8,7 +8,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Additionally, the conference will emphasize interdisciplinary applications of AI across sustainable development, environmental studies, biomedical engineering, social sciences, and business management, fostering the translation of AI research into societal and industrial impact. ICAANS 2026 aims to foster collaborations, spark innovative ideas, and share knowledge to address global challenges and promote a smarter, more autonomous, and ethically responsible future.
 
 
-email: icaans2026@gmail.com
+email: contact@icaans.com
 
 iteration: 1st
 full_title: 1st International Conference on Advancing Agentic AI Paradigm through Neuro-Symbolic AI and Swarm Intelligence
