--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -2,3 +2,54 @@ about: "Registrations for 1st ICAANS 2026 are not yet open. Please check back la
 url: ""
 description: |
   Registrations for 1st ICAANS 2026 are not yet open. Please check back later for updates.
+
+apc:
+  enabled: true
+  title: "Registration Fees"
+  description: |
+    The following registration fees apply for accepted papers. All fees include conference kit, proceedings, certificate, lunch, and refreshments.
+  categories:
+    - type: "Students"
+      indian: "₹3,000"
+      foreign: "$100"
+    - type: "Faculty/Research Scholars"
+      indian: "₹4,500"
+      foreign: "$150"
+    - type: "Industry Persons"
+      indian: "₹6,000"
+      foreign: "$200"
+  notes:
+    - "Early bird discount of 10% available until [Date TBA]."
+    - "At least one author per accepted paper must register."
+    - "Additional paper by the same author: 50% of the applicable fee."
+
+payment:
+  enabled: true
+  title: "Payment Information"
+  description: |
+    Payment for conference registration can be made through the following methods.
+    Please ensure that your payment is completed before the registration deadline.
+  methods:
+    - name: "Bank Transfer"
+      icon: "fa-university"
+      details: |
+        Bank Name: [To be announced]
+        Account Name: ICAANS 2026
+        Account Number: [To be announced]
+        SWIFT/BIC Code: [To be announced]
+        Reference: Please include your registration ID
+    - name: "Credit/Debit Card"
+      icon: "fa-credit-card"
+      details: |
+        Online payment via credit or debit card will be available through our secure payment portal.
+        Accepted cards: Visa, MasterCard, American Express
+    - name: "PayPal"
+      icon: "fa-paypal"
+      details: |
+        PayPal payments can be made to our official account.
+        PayPal Email: [To be announced]
+  notes:
+    - "All payments must be made in USD unless otherwise specified."
+    - "Please retain your payment confirmation for reference."
+    - "Refund policy: Full refund available up to 30 days before the conference. 50% refund up to 14 days before. No refunds within 14 days of the conference."
+    - "For any payment-related queries, please contact the registration committee."
