--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -1,7 +1,7 @@
-about: "Registrations for 1st ICAANS 2026 are not yet open. Please check back later for updates."
+about: "Register for the 1st International Conference on Advancements in Applied and Natural Sciences (ICAANS 2026). Early registration is recommended to secure your participation."
 url: ""
 description: |
-  Registrations for 1st ICAANS 2026 are not yet open. Please check back later for updates.
+  All authors of accepted papers must register for the conference. At least one author per paper is required to register and present the paper at the conference.
 
 apc:
   enabled: true
